@@ -96,6 +96,9 @@
 #endif
 
 /* Missing messages */
+#ifndef WM_SYNCPAINT
+#define WM_SYNCPAINT 0x88
+#endif
 #ifndef WM_MOUSEWHEEL
 #define WM_MOUSEWHEEL 0X20A
 #endif
